<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <data>

    <import type="android.view.View"/>

    <variable
        name="viewModel"
        type="com.hardik.mvvmapp.register.viewmodel.RegisterViewModel"
        />

  </data>

  <LinearLayout
      android:id="@+id/llRoot"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      tools:context=".login.view.LoginActivity"
      >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42hsdp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:paddingBottom="@dimen/_5hsdp"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
        >

      <TextView
          android:id="@+id/txtTitle"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_gravity="center"
          android:fontFamily="@font/kreon_regular"
          android:gravity="center"
          android:padding="@dimen/_5hsdp"
          android:text="@string/str_sign_up"
          android:textColor="@color/colorWhite"
          android:textSize="@dimen/_14font_ssp"
          />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_15hsdp"
        >

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/edtFirstName"
          android:layout_marginTop="@dimen/_10hsdp"
          android:hint="@string/str_first_name"
          android:inputType="text|textCapWords"
          android:nextFocusDown="@+id/edtLastName"
          style="@style/editText"
          />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/edtLastName"
          android:layout_marginTop="@dimen/_10hsdp"
          android:hint="@string/str_last_name"
          android:inputType="text|textCapWords"
          android:nextFocusDown="@+id/edtEmail"
          style="@style/editText"
          />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/edtEmail"
          android:layout_marginTop="@dimen/_10hsdp"
          android:hint="@string/str_email_address"
          android:inputType="textEmailAddress"
          android:nextFocusDown="@+id/edtPassword"
          style="@style/editText"
          />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/edtPassword"
          android:layout_marginTop="@dimen/_10hsdp"
          android:hint="@string/str_password"
          android:inputType="textPassword"
          android:nextFocusDown="@+id/edtZipCode"
          style="@style/editText"
          />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/edtZipCode"
          android:layout_marginTop="@dimen/_10hsdp"
          android:hint="@string/str_zip_code"
          android:imeOptions="actionDone"
          android:inputType="number"
          style="@style/editText"
          />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:fontFamily="@font/kreon_regular"
          android:gravity="center"
          android:text="@string/str_register_hint_1"
          android:textColor="@color/gray"
          android:textSize="@dimen/_11font_ssp"
          />

      <TableRow
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/kreon_regular"
            android:gravity="center"
            android:text="@string/str_register_hint_2"
            android:textColor="@color/gray"
            android:textSize="@dimen/_11font_ssp"
            />

        <TextView
            android:id="@+id/txtPrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_2hsdp"
            android:layout_marginStart="@dimen/_2hsdp"
            android:gravity="center"
            android:text="@string/str_register_hint_3"
            android:textColor="@color/gray"
            android:textSize="@dimen/_11font_ssp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_2hsdp"
            android:layout_marginStart="@dimen/_2hsdp"
            android:fontFamily="@font/kreon_regular"
            android:gravity="center"
            android:text="@string/str_register_hint_4"
            android:textColor="@color/gray"
            android:textSize="@dimen/_11font_ssp"
            />

        <TextView
            android:id="@+id/txtTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_2hsdp"
            android:layout_marginStart="@dimen/_2hsdp"
            android:gravity="center"
            android:text="@string/str_register_hint_5"
            android:textColor="@color/gray"
            android:textSize="@dimen/_11font_ssp"
            android:textStyle="bold"
            />

      </TableRow>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="@dimen/_185hsdp"
        android:layout_height="@dimen/_36hsdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15hsdp"
        android:background="@drawable/btn_shadow_red_selected"
        android:fontFamily="@font/kreon_bold"
        android:onClick="@{() -> viewModel.onRegisterClick()}"
        android:padding="@dimen/_5hsdp"
        android:text="@string/str_create_account"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14font_ssp"
        />

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10hsdp"
        android:onClick="@{() -> viewModel.onBackToLoginClick()}"
        android:orientation="vertical"
        android:padding="@dimen/_5hsdp"
        >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:fontFamily="@font/kreon_regular"
          android:gravity="center"
          android:text="@string/str_already_account"
          android:textColor="@color/colorBlack"
          android:textSize="@dimen/_11font_ssp"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:gravity="center"
          android:text="@string/str_login_here"
          android:textColor="#429787"
          android:textSize="@dimen/_15font_ssp"
          />

    </LinearLayout>

  </LinearLayout>

</layout>