...
  <!-- Dummy User -->
  <string name="user_name">Hardik Dungrani</string>
  <string name="user_name_sort">Hardik</string>
  <string name="user_email">hardik.techark@gmail.com</string>
  <string name="user_address">Surat</string>
  <string name="user_city">Surat</string>
  <string name="user_zip">395004</string>
  <string name="user_birthday">1993/06/10</string>

  <string name="str_place_email">Email:</string>
  <string name="str_place_address">Address:</string>
  <string name="str_place_address2">Address2:</string>
  <string name="str_place_city">City:</string>
...

  <string name="str_give_hint">Aw, go you. Fill in the details below and we\'ll make sure your friend feels the love.</string>
  <string name="str_pending_gift_rewards">Pending Gift Rewards</string>
  <string name="str_send_gift_to">To:</string>
  <string name="str_send_gift_hint">imbodawala@gmail.com\nSent on 20190214</string>
  <string name="str_login_user_name">hardik2.techark@gmail.com</string>
  <string name="str_login_user_password">123456789</string>
  <string name="str_filter_your_result">Filter Your Result</string>
  <string name="str_kind_of_business">Kind Of Business</string>
  <string name="str_in_what_city">In What City</string>
  <string name="str_how_close_to_you">How Close To You?</string>
  <string name="str_in_what_order">In What Order</string>
  <string name="str_354_business_found">354 Business Found</string>
...
